packages/kotlin/ttrp-frontend/src/test/resources/expr/negative/typ-002.expr
cast(customer as bool)
# expect: TTRP-TYP-002
